environments/gloo-mesh-core/east-region-ambient/egress/base/egress-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
  name: egress
