environments/gloo-mesh-core/east-region-ambient/egress/base/bombardier-egress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bombardier
  name: bombardier-egress
  namespace: egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bombardier
  template:
    metadata:
      labels:
        app: bombardier
    spec:

      containers:
      - name: bombardier
        image: alpine/bombardier:v1.2.5
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        resources:
            requests:
              cpu: 10m
              memory: 10Mi
        args: ["-c", "for run in $(seq 1 100000); do bombardier -c 1 -n 1 -p i,p,r httpbin.org/get; sleep 30; done"]
